# HarshCZBioHub

./: .gitignore  README.md  pyproject.toml  run_tests.sh  setup.cfg
iohub_wrapper/: __init__.py  cli.py  infection_pipeline.py  inspect_zarr.py
task1/: README.md  play.ipynb
task2/: README.md  play.ipynb
