[metadata]
name = iohub-wrapper
version = 0.1.0
description = CLI wrapper for image inspection and segmentation
author = Harsh Mankodiya
license = MIT

[options]
packages = find:
install_requires =
    numpy
    pandas
    matplotlib
    imageio
    scikit-image
    scipy
    tqdm
    ipykernel
    iohub @ git+https://github.com/czbiohub-sf/iohub.git

[options.entry_points]
console_scripts =
    iohub-cli = iohub_wrapper.cli:main
